# test

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  local-stt-funasr.toml.example  local-translation-translategemma.toml.example  pyproject.toml  release-please-config.json  vrc-live-caption.toml.example
.codex/: config.toml
.github/workflows/: checks.yml  live-integration-iflytek.yml  live-integration-openai.yml  live-integration.yml  pr-title.yml  release-please.yml
docs/: AGENTS.md  configuration.md
docs/development/: README.md  docstrings.md  environment.md  release-automation.md  testing.md
docs/development/architecture/: caption-and-osc.md  runtime.md  stt.md  translation.md  vrchat-chatbox-reference.md
docs/development/archive/: m2-stt-backend-plan.md  m2-stt-development-summary.md
docs/development/plans/: UI.md  VRChat_ChatBox_Final_Report.md  local-ai-services-plan.md  small-issues-todo.md  testing-roadmap.md  vrchat-chatbox-width-investigation.md  开发计划（精简版）.md
docs/official/FunASR/: README.md
docs/official/OpenAI/: OpenAI Python API library.md
docs/official/VRC/: OSC as Input Controller.md
docs/official/iFLYTEK/: 实时语音转写大模型-doc.md
docs/official/iFLYTEK/rtasr_llm_demo/: rtasr_llm_demo.py
src/vrc_live_caption/: __init__.py  __main__.py  chatbox.py  cli.py  config.py  env.py  errors.py  logging_utils.py  osc.py  pipeline.py  version.py
src/vrc_live_caption/audio/: __init__.py  sounddevice.py  types.py
src/vrc_live_caption/chatbox/: __init__.py  fonts.py  layout.py  model.py  output.py  pacing.py  state.py  text.py
src/vrc_live_caption/local_stt/: __init__.py
src/vrc_live_caption/local_stt/funasr/: __init__.py  chunking.py  config.py  protocol.py  server.py  session.py
src/vrc_live_caption/local_translation/: __init__.py
src/vrc_live_caption/local_translation/translategemma/: __init__.py  config.py  protocol.py  server.py
src/vrc_live_caption/runtime/: __init__.py  capture.py  consumers.py  queue.py  types.py
src/vrc_live_caption/stt/: __init__.py  factory.py  funasr_local.py  iflytek_rtasr.py  openai_realtime.py  resample.py  runner.py  types.py
src/vrc_live_caption/translation/: __init__.py  backends.py  factory.py  service.py  translategemma_local.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: README.md  test_iflytek_rtasr_live.py  test_local_stt_sidecar.py  test_local_translation_sidecar.py  test_openai_realtime_live.py  test_translation_live.py
tests/support/: __init__.py  audio_fakes.py  config_helpers.py  replay.py  stt_fakes.py  stt_live.py
tests/support/builders/: __init__.py  config.py
tests/support/fakes/: __init__.py  audio.py  osc.py  stt.py
tests/support/harnesses/: __init__.py  audio.py  live_stt.py
tests/unit/: test_errors.py  test_osc.py  test_version.py
tests/unit/audio/: __init__.py  test_sounddevice.py
tests/unit/chatbox/: test_chatbox.py  test_layout.py  test_output.py  test_state.py
tests/unit/cli/: test_cli.py  test_cli_devices.py  test_cli_doctor.py  test_cli_helpers.py  test_cli_local_stt_serve.py  test_cli_local_translation_serve.py  test_cli_osc_test.py  test_cli_record_sample.py  test_cli_root.py  test_cli_run.py
tests/unit/config/: test_app_config_loading.py  test_app_config_models.py  test_app_config_validation.py  test_config.py
tests/unit/env/: test_env.py
tests/unit/local_stt/: _server_support.py  _session_support.py  test_chunking.py  test_config.py  test_funasr_server_device_resolution.py  test_funasr_server_model_bundle.py  test_funasr_server_runtime.py  test_funasr_websocket_session_flow.py  test_funasr_websocket_session_validation.py  test_server.py  test_session.py
tests/unit/local_translation/: test_config.py  test_translategemma_server.py
tests/unit/logging/: test_logging_utils.py
tests/unit/pipeline/: _support.py  test_pipeline_controller_events.py  test_pipeline_controller_lifecycle.py  test_pipeline_controller_shutdown.py  test_record_audio_sample.py  test_transcription_runner.py
tests/unit/runtime/: test_consumers.py  test_engine.py  test_queue.py
tests/unit/stt/: _funasr_local_support.py  _runner_support.py  test_factory.py  test_funasr_local.py  test_funasr_local_attempt.py  test_funasr_local_backend.py  test_funasr_local_normalization.py  test_funasr_local_probe.py  test_iflytek_rtasr.py  test_openai_realtime.py  test_session_base.py  test_stt_runner_failure_handling.py  test_stt_runner_lifecycle.py
tests/unit/translation/: _support.py  test_translategemma_local_backend.py  test_translation.py  test_translation_deepl_backend.py  test_translation_factory.py  test_translation_runtime_validation.py  test_translation_worker.py
